# pkg-rs

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  DIAGRAMS.md  PLAN.md  README.md  REPORT.md  TODO.md  USERGUIDE.md  bootstrap.ps1  bootstrap.py  bootstrap.sh  build.rs  diagram.md  plan1.md  plan3.md  plan8.md  pyproject.toml  task.md
.cargo/: config.toml
_ref/: AGENTS.md  DIAGRAMS.md  diagram.md  plan1.md  plan2.md
benches/: scan_bench.rs
docs/: book.toml
docs/src/: SUMMARY.md  installation.md  intro.md  package-structure.md  quickstart.md
docs/src/advanced/: caching.md  constraints.md  tokens.md
docs/src/cli/: commands.md  completions.md  options.md
docs/src/python/: app.md  env.md  package.md  solver.md  storage.md
md/: REPORT.md  USERGUIDE.md  diagram.md  plan10.md  plan2.md  plan3.md  plan4.md  plan5.md  plan6.md  plan7.md  plan9.md
python/: pkg.pyi
src/: README.md  app.rs  build.rs  build_command.rs  cache.rs  config.rs  dep.rs  env.rs  error.rs  evar.rs  lib.rs  loader.rs  name.rs  package.rs  pip.rs  py.rs  storage.rs  token.rs  toolset.rs
src/gui/: actions.rs  mod.rs  node_graph.rs  node_layout.rs  package_list.rs  state.rs  toolset_editor.rs  tree_editor.rs
src/pkg/: README.md  cli.rs  main.rs  python.rs
src/pkg/commands/: build.rs  build_env.rs  env.rs  gen_pkg.rs  generate.rs  graph.rs  info.rs  list.rs  mod.rs  pip.rs  rez_bind.rs  rez_config.rs  rez_context.rs  rez_passthrough.rs  rez_status.rs  rez_suite.rs  scan.rs
src/pkg/shell/: commands.rs  helper.rs  mod.rs
src/solver/: mod.rs  provider.rs  ranges.rs
tests/: integration.rs  test.ps1  test.sh
