[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pkg"
version = "0.1.0"
description = "Software package manager with Python-based package definitions"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["package-manager", "pipeline", "vfx", "dcc"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
]

[tool.maturin]
bindings = "pyo3"
features = ["pyo3/extension-module"]
module-name = "pkg"
python-source = "python"
strip = true
